integration/_fixtures/tmux/python_parse/trace
trace = '''Traceback (most recent call last):
  File "/path/to/file", line 2, in funcname
    yield
  File "/path/to/file", line 3, in funcname
    yield
RuntimeError: error

Cause:
  File "/path/to/file", line 2, in funcname
    yield
  File "/path/to/file", line 3
    wrong =
           ^
SyntaxError: error

trailing garbage
